exports[`<LeftNav /> component should render <LeftNav /> correctly 1`] = `
<div
  className="recent-searches">
  <div
    className="title">
    RECENT SEARCHES
  </div>
  <div>
    <a
      className="recent-search"
      onClick={[Function]}
      style={Object {}}>
      Sun
    </a>
    <a
      className="recent-search"
      onClick={[Function]}
      style={Object {}}>
      Moon
    </a>
    <a
      className="recent-search"
      onClick={[Function]}
      style={Object {}}>
      Earth
    </a>
  </div>
</div>
`;

exports[`<LeftNav /> component should render <RecentSearch /> correctly 1`] = `
<a
  className="recent-search"
  onClick={[Function]}
  style={Object {}}>
  Hello
</a>
`;
